cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )

add_executable(imgDisplay src/imgDisplay.cpp)
add_executable(vidDisplay src/vidDisplay.cpp include/filter.h include/faceDetect.h src/faceDetect.cpp src/filters.cpp)
add_executable(timeBlur src/timeBlur.cpp)
add_executable(face src/showFaces.cpp include/faceDetect.h src/faceDetect.cpp)
#add_executable(harris src/harris.cpp)
add_executable(matching src/featurematching.cpp include/feature_s.h src/harris.cpp)
target_link_libraries(imgDisplay ${OpenCV_LIBS} )
target_link_libraries(vidDisplay ${OpenCV_LIBS} )
target_link_libraries(timeBlur ${OpenCV_LIBS} )
target_link_libraries(face ${OpenCV_LIBS} )
#target_link_libraries(harris ${OpenCV_LIBS} )
target_link_libraries(matching ${OpenCV_LIBS} )